--- a/main.ipynb
+++ b/main.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -288,11 +288,11 @@
       "Number of users: 18\n",
       "Size of the PBCH channel (before decoding): 912\n",
       "Size of the PBCH channel (after decoding): 456\n",
-      "User ID: 11\n",
-      "MCS: 2\n",
-      "Symbol start PDCCH: 4\n",
-      "RB start PDCCH: 52\n",
-      "HARQ: 0\n"
+      "[PBCHU] User ID: 11\n",
+      "[PBCHU] MCS of PDCCHU: 2\n",
+      "[PBCHU] Symbol start  of PDCCHU: 4\n",
+      "[PBCHU] RB start  of PDCCHU: 52\n",
+      "[PBCHU] HARQ of PDCCHU: 0\n"
      ]
     }
    ],
