run on first matrix

--- a/main.ipynb
+++ b/main.ipynb
@@ -109,7 +109,7 @@
    ],
    "source": [
     "# Load raw matrix\n",
-    "data = np.genfromtxt('./data/tfMatrix_3.csv', delimiter=';')\n",
+    "data = np.genfromtxt('./data/tfMatrix.csv', delimiter=';')\n",
     "tf_matrix = data[:,0::2] + 1j*data[:,1::2]\n",
     "\n",
     "# Constants\n",
